@@ -1,3 +1,8 @@
+2013-07-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/sim/ucsim/stm8.src/stm8.cc: Change result code for invalid and
+	  incomplete instructions so regression tests scripts detect problem.
+
 2013-07-13 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCerr.c:
